<resources>
    <string name="app_name">Marvelpedia</string>

    <string name="register_button">Register! It\'s Free! (for now)</string>
    <string name="login_button">Let\'s go</string>
    <string name="password_field">Password</string>

    <string name="marvelname">MarvelName</string>
    <string name="email">Email</string>
    <string name="user_name">User Name</string>
    <string name="last_name">Last Name</string>
    <string name="name">Name</string>
    <string name="marvel_name">Marvel Name</string>
    <string name="create">CREATE</string>

    <string name="email_field">Email address or username</string>
    <string name="login_text">  It\'s Login Time!  \n</string>
    <!-- Strings related to login -->
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be more than 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password_match">"Passwords do not match!"</string>
    <string name="empty_error">"Cannot be empty"</string>


    <string name="search_hint">Hulk, Ant-man, Iron man etc…</string>
    <string name="private_API_key">c08d8b1502acba654df4211f076ecee3bd56a380</string>
    <string name="public_API_key">da311cab234d0c1a1134f345bc99fa2a</string>
    <string name="base_url">https://gateway.marvel.com</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="forgot_pass_button">Forgot my Password</string>
    <string name="favorites_default_text">Tap on the heart icon of your favorite Heroes, to appear here!</string>
    <string name="save">save</string>
    <string name="Profile">Profile</string>
    <string name="Share">share</string>
</resources>